# Store

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  mypy.ini  nginx.conf  pyproject.toml
config/: api_urls.py  ql_schema.py  settings.py  urls.py
orders/: admin.py  api_views.py  cart.py  forms.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/orders/: cart.html  checkout.html
products/: admin.py  api_views.py  models.py  ql_schema.py  serializers.py  urls.py  views.py
products/management/commands/: seed_products.py
products/migrations/: 0001_initial.py  0002_alter_product_price.py
products/templates/products/: product_detail.html  product_list.html
reviews/: admin.py  api_views.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
reviews/templates/reviews/: add_review.html
static/css/: base.css  orders.css  products.css  users.css
templates/: base.html
tests/: test_api.py  test_cart.py  test_orders.py  test_products.py
users/: api_views.py  serializers.py  urls.py  views.py
users/templates/users/: login.html  profile.html  profile_edit.html  register.html
