[project]
name = "store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "psycopg>=3.3.4",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "simplejwt>=2.0.1",
]
