[project]
name = "store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "flake8>=7.3.0",
    "graphene-django>=3.2.3",
    "gunicorn>=26.0.0",
    "mypy>=2.1.0",
    "Pillow>=11.0.0",
    "psycopg>=3.3.4",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "dj-database-url>=3.1.2",
    "whitenoise>=6.9.0",
    "django-cloudinary-storage>=0.3.0",
    "cloudinary>=1.45.0",
]
